# project_airport

./: CMakeLists.txt
include/: airplane.h  cargoAirplane.h  flight.h  idGen.h  mainmenu.h  pasengerAirplane.h  pilot.h  proPilot.h  unexperiencedPilot.h
src/: airplane.cpp  cargoAirplane.cpp  flight.cpp  idGen.cpp  main.cpp  mainmenu.cpp  pasengerAirplane.cpp  pilot.cpp  proPilot.cpp  unexperiencedPilot.cpp
